# http-server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  dependencies.vcpkg
.github/workflows/: ubuntu.yml
src/: CMakeLists.txt  http-server.c  http-server.h  main.c
src/abnf/: definition.abnf  parser.c  parser.h
src/abnf-parser/: CMakeLists.txt  core.abnf  definition.abnf
src/connection/: CMakeLists.txt  connection.c  connection.h
src/fib/: fib.c  fib.h
src/http/: CMakeLists.txt  http.abnf
src/image/: CMakeLists.txt  image.c  image.h
src/lib/: CMakeLists.txt
src/server/: CMakeLists.txt  server.c  server.h  tcp_connection.c  tcp_connection.h
src/uri/: CMakeLists.txt  uri.abnf
test/: CMakeLists.txt  connection.c  fib.c  image.c  server.c
